--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular-spinkit": "~0.3.3",
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.1.1",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular-bootstrap": "~0.14.3"
   }
 }
