--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "version": "0.1.0",
+  "version": "1.1.0",
   "name": "crud-it",
   "repository": "https://github.com/nicolasMazuryk/CRUD",
   "license": "MIT",
+  "main": "app/server.js",
   "devDependencies": {
     "http-server": "^0.6.1",
     "bower": "^1.3.1",
@@ -10,6 +11,9 @@
     "gulp-connect": "^2.2.0"
   },
   "scripts": {
-    "start": "node app/server.js",
+    "test": "echo \"Package json issuee\" && exit 1"
+  },
+  "dependencies": {
+    "mime": "^1.3.4"
   }
 }
