--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Package json issuee\" && exit 1"
   },
   "dependencies": {
+    "express": "^4.13.3",
     "mime": "^1.3.4"
   }
 }
