--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "gulp-connect": "^2.2.0"
   },
   "scripts": {
-    "test": "echo \"Package json issuee\" && exit 1"
+    "start": "node app/server.js",
+    "dev": ""
   },
   "dependencies": {
+    "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "mime": "^1.3.4"
   }
