--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "license": "MIT",
   "main": "app/server.js",
   "devDependencies": {
-    "http-server": "^0.6.1",
+    "babel-core": "^5.8.34",
+    "babel-loader": "^5.4.0",
     "bower": "^1.3.1",
     "gulp": "3.8",
-    "gulp-connect": "^2.2.0"
+    "gulp-connect": "^2.2.0",
+    "http-server": "^0.6.1",
+    "webpack": "^1.12.9"
   },
   "scripts": {
     "start": "node app/server.js",
@@ -16,7 +19,6 @@
   },
   "dependencies": {
     "body-parser": "^1.14.2",
-    "express": "^4.13.3",
-    "mime": "^1.3.4"
+    "express": "^4.13.3"
   }
 }
