--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "license": "MIT",
   "main": "app/server.js",
   "devDependencies": {
+    "angular": "^1.4.8",
+    "angular-animate": "^1.4.8",
+    "angular-aria": "^1.4.8",
+    "angular-material": "^1.0.1",
     "autoprefixer-loader": "^3.1.0",
     "babel-core": "^5.8.34",
     "babel-loader": "^5.4.0",
@@ -29,6 +33,7 @@
     "dev": ""
   },
   "dependencies": {
+    "angular-messages": "^1.4.8",
     "body-parser": "^1.14.2",
     "express": "^4.13.3"
   }
